--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
     "secret": "This is a very secret secret, do not tell anyone.",
     "urls": {
         "homebase": "http://141.255.184.157:8088",
-        "3rd-base": "mqtt://141.255.184.157:1883"
+        "3rd-base": "mqtt://141.255.184.157:1883",
+        "couch": "http://127.0.0.1:7777/baseball"
     }
 }
