--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "mocha": "^2.2.1"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --timeout 4000"
   },
   "repository": {
     "type": "git",
