--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "secret": "This is a very secret secret, do not tell anyone.",
     "urls": {
-        "homebase": "http://141.255.184.157:8088",
-        "3rd-base": "mqtt://141.255.184.157:1883",
-        "couch": "http://127.0.0.1:7777/baseball"
+        "homebase": "http://localhost:8088",
+        "3rd-base": "mqtt://localhost:1883",
+        "couch": "http://127.0.0.1:5984/baseball"
     }
 }
